--- a/nginx-service/docker/etc-nginx/snippets/demo-locations.conf
+++ b/nginx-service/docker/etc-nginx/snippets/demo-locations.conf
@@ -4,7 +4,7 @@ location / {
 }
 location /building/demo/ {
   include /etc/nginx/snippets/protected.conf;
-  root /etc/nginx/protected;
+  root /etc/nginx/public;
   try_files $uri $uri/index.html $uri.html =404;
 }
 location /grip/ {
