--- a/nginx-service/Makefile
+++ b/nginx-service/Makefile
@@ -24,39 +24,51 @@ ifndef NGO_TOKEN_SECRET
 $(error NGO_TOKEN_SECRET is not set)
 endif
 
+ifndef BMEG_SITE_BRANCH
+$(error BMEG_SITE_BRANCH is not set)
+endif
+
+ifndef PORT
+$(error PORT is not set)
+endif
+
+ifndef GRIP_SERVER
+$(error GRIP_SERVER is not set)
+endif
 
 website:
 	echo Cloning static site ..................
 	cd ~ && rm -rf bmeg-site || true
 	cd ~ && git clone https://github.com/bmeg/bmeg-site
+	cd ~/bmeg-site && git fetch --all && git checkout $(BMEG_SITE_BRANCH)
 	echo Setting base url in hugo config ..................
-	cd ~/bmeg-site && sed -i.bak s~baseURL:.*~baseURL: $(BASE_URL)~ config.yaml
+	cd ~/bmeg-site && sed -i.bak 's~baseURL:.*~baseURL: $(BASE_URL)~' config.yaml
 	cd ~/bmeg-site && hugo
-	echo copying static site to nginx ..................
-	cp -r bmeg-site/public docker/etc-nginx/public
 
 
 nginx: website
-	rm -rf ~/bmeg-site/public
-	echo Setting base url in hugo config ..................
-	cd ~/bmeg-site && sed -i.bak s~https://bmeg.github.io/~$(BASE_URL)~ config.yaml
-	cd ~/bmeg-site && hugo
 	echo copying static site to nginx ..................
+	rm -rf docker/etc-nginx/public || true
 	cp -r ~/bmeg-site/public docker/etc-nginx/public
 
-build-docker: nginx
+build: nginx
 	echo building docker .......
 	docker build -t bmeg-nginx .
 
-run-docker: build-docker
-	docker run --rm -it -p 443:443 \
+run: build
+	docker run --rm -it -p $(PORT):$(PORT) \
 	-e DEBUG=1  \
 	-e RESOLVER_ADDRESS=$(RESOLVER_ADDRESS) \
 	-e NGO_CALLBACK_SCHEME=https \
 	-e NGO_CLIENT_ID=$(NGO_CLIENT_ID) \
 	-e NGO_CLIENT_SECRET=$(NGO_CLIENT_SECRET) \
 	-e NGO_TOKEN_SECRET=$(NGO_TOKEN_SECRET) \
+	-e GRIP_SERVER=$(GRIP_SERVER) \
+	-e LETSENCRYPT_EMAIL=$(LETSENCRYPT_EMAIL) \
+	-e BASE_URL=$(BASE_URL) \
+	-e PORT=$(PORT) \
 	bmeg-nginx:latest
 
 clean:
 	rm -r docker/etc-nginx/public
+	docker rmi bmeg-nginx
