--- a/nginx-service/docker/etc-nginx/snippets/demo-locations.conf
+++ b/nginx-service/docker/etc-nginx/snippets/demo-locations.conf
@@ -9,15 +9,15 @@ location /building/demo/ {
 }
 location /grip/ {
   include /etc/nginx/snippets/protected.conf;
-  proxy_pass http://arachne.compbio.ohsu.edu/;
+  proxy_pass http://%grip_server%/;
 }
 location /api/ {
   include /etc/nginx/snippets/protected.conf;
-  proxy_pass http://arachne.compbio.ohsu.edu/;
+  proxy_pass http://%grip_server%/;
 }
 location /v1/ {
   include /etc/nginx/snippets/protected.conf;
-  proxy_pass http://arachne.compbio.ohsu.edu/v1/;
+  proxy_pass http://%grip_server%/v1/;
 }
 location /_oauth {
   include /etc/nginx/snippets/protected.conf;
