--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,5 +15,7 @@ services:
     ports:
       - 80:80
       - 443:443
+    volumes:
+       - ./nginx-service/docker/etc-letsencrypt:/etc/letsencrypt
     depends_on:
       - grip-service
