NGO_EXTRA_VALIDITY

--- a/nginx-service.example.env
+++ b/nginx-service.example.env
@@ -11,4 +11,5 @@ NGO_CALLBACK_SCHEME=https
 NGO_CLIENT_ID=<CLIENT ID>
 NGO_CLIENT_SECRET=<SECRET>
 NGO_TOKEN_SECRET=<RANDOM STRING>
+NGO_EXTRA_VALIDITY=86400
 DEBUG=True
