--- a/nginx-service/docker/etc-nginx/snippets/demo-locations.conf
+++ b/nginx-service/docker/etc-nginx/snippets/demo-locations.conf
@@ -1,3 +1,60 @@
+# deny write-api see https://github.com/bmeg/grip/blob/master/gripql/gripql.proto
+# AddVertex
+location ~ .*/v1/graph/.*/vertex {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# AddEdge
+location ~ .*/v1/graph/.*/edge {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# BulkAdd
+location ~ .*/v1/graph {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# AddGraph
+# DeleteGraph
+location ~ .*/v1/graph/.* {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# DeleteVertex
+location ~ .*/v1/graph/vertex/.* {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# DeleteEdge
+location ~ .*/v1/graph/edge/.* {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# AddIndex
+location ~ .*/v1/graph/index/.* {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# DeleteIndex
+location ~ .*/v1/graph/index/.*/.* {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# AddSchema
+location ~ .*/v1/graph/.*/schema {
+  limit_except GET HEAD {
+    deny all;
+  }
+}
+# read apis
 location / {
   root /etc/nginx/public;
   try_files $uri $uri/index.html $uri.html =404;
