--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,6 @@ node_modules/
 public/js/bundle.js
 public/css/main.css
 .DS_Store
-nginx-service/docker/etc-letsencrypt/*
-grip-service.env
-nginx-service.env
+nginx/docker/etc-letsencrypt/*
+grip.env
+nginx.env
