matches protected /analyze/access

--- a/nginx/docker/etc-nginx/snippets/demo-locations.conf
+++ b/nginx/docker/etc-nginx/snippets/demo-locations.conf
@@ -59,7 +59,7 @@ location / {
   root /etc/nginx/public;
   try_files $uri $uri/index.html $uri.html =404;
 }
-location /building/demo/ {
+location /analyze/access {
   include /etc/nginx/snippets/protected.conf;
   root /etc/nginx/public;
   try_files $uri $uri/index.html $uri.html =404;
