simplifies write api protection

--- a/nginx/docker/etc-nginx/snippets/demo-locations.conf
+++ b/nginx/docker/etc-nginx/snippets/demo-locations.conf
@@ -1,59 +1,5 @@
 # deny write-api see https://github.com/bmeg/grip/blob/master/gripql/gripql.proto
-# AddVertex
-location ~ .*/v1/graph/.*/vertex {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
-# AddEdge
-location ~ .*/v1/graph/.*/edge {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
-# BulkAdd
-location ~ .*/v1/graph {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
-# AddGraph
-# DeleteGraph
-location ~ .*/v1/graph/.* {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
-# DeleteVertex
-location ~ .*/v1/graph/vertex/.* {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
-# DeleteEdge
-location ~ .*/v1/graph/edge/.* {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
-# AddIndex
-location ~ .*/v1/graph/index/.* {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
-# DeleteIndex
-location ~ .*/v1/graph/index/.*/.* {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
-# AddSchema
-location ~ .*/v1/graph/.*/schema {
-  limit_except GET HEAD {
-    deny all;
-  }
-}
+
 # read apis
 location / {
   root /etc/nginx/public;
@@ -69,10 +15,12 @@ location /grip/ {
   proxy_pass http://%grip_server%/;
 }
 location /api/ {
+  limit_except GET HEAD { deny all; }
   include /etc/nginx/snippets/protected.conf;
   proxy_pass http://%grip_server%/;
 }
 location /v1/ {
+  limit_except GET HEAD { deny all; }
   include /etc/nginx/snippets/protected.conf;
   proxy_pass http://%grip_server%/v1/;
 }
