--- a/nginx/docker/etc-nginx/snippets/demo-locations.conf
+++ b/nginx/docker/etc-nginx/snippets/demo-locations.conf
@@ -14,6 +14,12 @@ location /grip/ {
   include /etc/nginx/snippets/protected.conf;
   proxy_pass http://%grip_server%/;
 }
+# /api/v1/graph/bmeg_rc1_2/query
+location ~ ^/api/(.*/query) {
+  include /etc/nginx/snippets/protected.conf;
+  proxy_buffering off;
+  proxy_pass http://%grip_server%/$1;
+}
 location /api/ {
   limit_except GET HEAD { deny all; }
   include /etc/nginx/snippets/protected.conf;
