--- a/nginx/etc/nginx/protected.conf
+++ b/nginx/etc/nginx/protected.conf
@@ -1,4 +1,5 @@
-# common for all protected resources
+## common for all protected resources
+
 access_by_lua_file "/etc/nginx/lua/nginx-google-oauth/access.lua";
 expires 0;
 add_header Google-User $ngo_user;
