--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,8 +61,10 @@ services:
   # for letsencrypt
   # see this if problems with renewals
      # https://github.com/Bielecki/certbot-renew_fix/blob/master/renew-fix.sh
+     # https://github.com/certbot/certbot/issues/2550#issuecomment-197417732
   certbot:
     image: certbot/certbot
+    container_name: certbot
     volumes:
       - ./data/certbot/conf:/etc/letsencrypt
       - ./data/certbot/www:/var/www/certbot
