Improves dir names

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,19 +32,22 @@ services:
       - 443:443
     volumes:
       # content
-      - ./bmeg-site/public:/usr/share/nginx/html
-      - ./nginx/usr/share/nginx/html:/usr/share/nginx/test-html
-      - /mnt/data2/bmeg/bmeg-etl/outputs:/usr/share/nginx/data
+      - ./bmeg-site/public:/usr/share/nginx/bmegio.ohsu.edu
+      - ./nginx/usr/share/nginx/default:/usr/share/nginx/default
+      - ./nginx/usr/share/nginx/gen3-ohsu.ddns.net:/usr/share/nginx/gen3-ohsu.ddns.net
+      - /mnt/data2/bmeg/bmeg-etl/outputs:/usr/share/nginx/bmegio.ohsu.edu.data
 
       # config
       - ./nginx/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./nginx/etc/nginx/http.conf.d/env.conf:/etc/nginx/http.conf.d/env.conf
       - ./nginx/etc/nginx/conf.d/default.conf:/etc/nginx/conf.d/default.conf
       - ./nginx/etc/nginx/protected.conf:/etc/nginx/protected.conf
+      - ./nginx/etc/nginx/grip.conf:/etc/nginx/grip.conf
       - ./nginx/etc/nginx/lua/nginx-google-oauth/access.lua:/etc/nginx/lua/nginx-google-oauth/access.lua
 
       # specific sites
       - ./nginx/etc/nginx/sites-enabled/bmegio.ohsu.edu:/etc/nginx/sites-enabled/bmegio.ohsu.edu:ro
+      - ./nginx/etc/nginx/sites-enabled/gen3-ohsu.ddns.net:/etc/nginx/sites-enabled/gen3-ohsu.ddns.net:ro
       - ./nginx/etc/nginx/sites-enabled/bmeg.io:/etc/nginx/sites-enabled/bmeg.io:ro
 
       # for letsencrypt
@@ -82,3 +85,63 @@ services:
     depends_on:
       - grip
       - mongo
+
+
+  # https://github.com/jupyterhub/jupyterhub-deploy-docker
+  # jupyterhub database
+  hub-db:
+    image: postgres:9.5
+    container_name: jupyterhub-db
+    restart: always
+    environment:
+      POSTGRES_DB: ${POSTGRES_DB}
+      PGDATA: ${DB_VOLUME_CONTAINER}
+    env_file:
+      - secrets/jupyter.env
+    volumes:
+      - "db:${DB_VOLUME_CONTAINER}"
+
+  # jupyterhub
+  hub:
+    depends_on:
+      - hub-db
+    build:
+      context: jupyterhub
+      args:
+        JUPYTERHUB_VERSION: ${JUPYTERHUB_VERSION}
+    restart: always
+    image: jupyterhub
+    container_name: jupyterhub
+    volumes:
+      # Bind Docker socket on the host so we can connect to the daemon from
+      # within the container
+      - "/var/run/docker.sock:/var/run/docker.sock:rw"
+      # Bind Docker volume on host for JupyterHub database and cookie secrets
+      - "data:${DATA_VOLUME_CONTAINER}"
+      - ./secrets/jupyterhub_config.py:/srv/jupyterhub/jupyterhub_config.py
+    ports:
+      - "443:443"
+    links:
+      - hub-db
+    environment:
+      POSTGRES_HOST: hub-db
+    env_file:
+      - secrets/jupyter.env
+      - secrets/oauth.env
+    command: >
+      jupyterhub -f /srv/jupyterhub/jupyterhub_config.py
+
+# docker volume create --name=jupyterhub-data
+# docker volume create --name=jupyterhub-db-data
+volumes:
+  data:
+    external:
+      name: ${DATA_VOLUME_HOST}
+  db:
+    external:
+      name: ${DB_VOLUME_HOST}
+
+# networks:
+#   default:
+#     external:
+#       name: ${DOCKER_NETWORK_NAME}
