--- a/nginx/etc/nginx/nginx.conf
+++ b/nginx/etc/nginx/nginx.conf
@@ -91,4 +91,5 @@ http {
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/bmeg.io;
 	include /etc/nginx/sites-enabled/bmegio.ohsu.edu;
+	include /etc/nginx/sites-enabled/gen3-ohsu.ddns.net;
 }
