--- a/nginx/etc/nginx/grip.conf
+++ b/nginx/etc/nginx/grip.conf
@@ -3,7 +3,7 @@
   ##
   lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
   lua_ssl_verify_depth        5;
-	
+
   set_by_lua $ngo_callback_host '
     if os.getenv("NGO_CALLBACK_HOST") then
       return os.getenv("NGO_CALLBACK_HOST")
@@ -54,7 +54,7 @@
   # our protected "landing page"
   location /analyze/access {
     include /etc/nginx/protected.conf;
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/bmegio.ohsu.edu;
     try_files $uri $uri/index.html $uri.html =404;
   }
   location /grip/ {
