--- a/nginx/etc/nginx/nginx.conf
+++ b/nginx/etc/nginx/nginx.conf
@@ -92,4 +92,5 @@ http {
 	include /etc/nginx/sites-enabled/bmeg.io;
 	include /etc/nginx/sites-enabled/bmegio.ohsu.edu;
 	include /etc/nginx/sites-enabled/gen3-ohsu.ddns.net;
+	include /etc/nginx/sites-enabled/bmeg-jupyter.ddns.net;
 }
