--- a/nginx/etc/nginx/nginx.conf
+++ b/nginx/etc/nginx/nginx.conf
@@ -33,6 +33,8 @@ http {
 	tcp_nodelay on;
 	keepalive_timeout 65;
 	types_hash_max_size 2048;
+	# set large max body size for jupyter
+	client_max_body_size 100M;
 	# server_tokens off;
 
 	# server_names_hash_bucket_size 64;
@@ -94,6 +96,7 @@ http {
 	# Virtual Host Configs
 	##
 
+	lua_package_path '/etc/nginx/lua/?.lua;';
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/bmeg.io;
