Ensures grip paths protected

--- a/nginx/etc/nginx/grip.conf
+++ b/nginx/etc/nginx/grip.conf
@@ -58,16 +58,20 @@
     try_files $uri $uri/index.html $uri.html =404;
   }
   location /grip/ {
+    include /etc/nginx/protected.conf;
     proxy_pass http://grip:8201/;
   }
   # /api/v1/graph/<graph>/query
   location ~ ^/api/(.*/query) {
+    include /etc/nginx/protected.conf;
     proxy_buffering off;
     proxy_pass http://grip:8201/$1;
   }
   location /api/ {
+    include /etc/nginx/protected.conf;
     proxy_pass http://grip:8201/;
   }
   location /v1/ {
+    include /etc/nginx/protected.conf;
     proxy_pass http://grip:8201/v1/;
   }
