--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,8 @@ services:
        - /mnt/data1/bmeg/mongo-data:/data/db
 
   grip:
-    image: bmeg/grip
+    # image: bmeg/grip
+    build: grip
     container_name: grip
     volumes:
         - ./secrets/grip_config.yml:/config/grip_config.yml
@@ -37,8 +38,8 @@ services:
       - ./nginx/bmeg-site/public:/usr/share/nginx/bmeg.io
       - ./nginx/usr/share/nginx/default:/usr/share/nginx/default
       - ./nginx/usr/share/nginx/gen3-ohsu.ddns.net:/usr/share/nginx/gen3-ohsu.ddns.net
-      - /mnt/data2/bmeg/bmeg-etl/outputs:/usr/share/nginx/bmegio.ohsu.edu.data
-      - /mnt/data2/bmeg/bmeg-etl/outputs:/usr/share/nginx/bmeg.io.data
+      - /mnt/data2/bmeg/bmeg-data:/usr/share/nginx/bmegio.ohsu.edu.data
+      - /mnt/data2/bmeg/bmeg-data:/usr/share/nginx/bmeg.io.data
 
       # config
       - ./nginx/etc/nginx/nginx.conf:/etc/nginx/nginx.conf
