add whitelisted grip paths

--- a/nginx/etc/nginx/grip-bmegio.ohsu.edu.conf
+++ b/nginx/etc/nginx/grip-bmegio.ohsu.edu.conf
@@ -1,4 +1,4 @@
-	##
+  ##
   # oath setup
   ##
   lua_ssl_trusted_certificate /etc/ssl/certs/ca-certificates.crt;
@@ -27,7 +27,6 @@
   set_by_lua $ngo_user               'return os.getenv("NGO_USER")';
   set_by_lua $ngo_email_as_user      'return os.getenv("NGO_EMAIL_AS_USER")';
 
-
   ##
   # oauth callback
   ##
@@ -48,6 +47,25 @@
   }
 
   ##
+  # whitelist
+  ##
+
+  location ~ ^/v1/(.*/schema) {
+    proxy_buffering off;
+    proxy_pass http://grip:8201/v1/$1;
+    break;
+  }
+  location ~ ^/v1/(graph)/?$ {
+    add_header Allow "GET, HEAD" always;
+    limit_except GET HEAD {
+      deny all;
+    }
+    proxy_buffering off;
+    proxy_pass http://grip:8201/v1/$1;
+    break;
+  }
+
+  ##
   # protected
   ##
 
@@ -60,12 +78,6 @@
   location /grip/ {
     include /etc/nginx/protected.conf;
     proxy_pass http://grip:8201/;
-  }
-  # /api/v1/graph/<graph>/query
-  location ~ ^/api/(.*/query) {
-    include /etc/nginx/protected.conf;
-    proxy_buffering off;
-    proxy_pass http://grip:8201/$1;
   }
   location /api/ {
     include /etc/nginx/protected.conf;
